# GoombaRender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
goomba_render/src/: application.cpp  application.h  core.h  engine.cpp  engine.h  goombapch.h  log.cpp  log.h  main.cpp  window.cpp  window.h
goomba_render/src/engine/: application.cpp  application.h  application_loop.cpp  application_loop.h  engine.cpp  engine.h  graphics_context.cpp  graphics_context.h  imgui_layer.cpp  imgui_layer.h  input.cpp  input.h  log.cpp  log.h  window.cpp  window.h  window_application.cpp  window_application.h
goomba_render/src/engine/events/: event.h  input_event.h  window_event.h
goomba_render/src/engine/window/: gl_framework_window.cpp  gl_framework_window.h  sdl_window.cpp  sdl_window.h  window.cpp  window.h
goomba_render/src/renderer/: application.cpp  application.h  asset.h  buffer_layout.cpp  buffer_layout.h  camera.cpp  camera.h  glad_context_creator.cpp  glad_context_creator.h  graphics_context.cpp  graphics_context.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  neorenderer.cpp  neorenderer.h  ogl_obj.h  perspective_camera.cpp  perspective_camera.h  renderer.cpp  renderer.h  renderer_application.cpp  renderer_application.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  uniform_settings.cpp  uniform_settings.h  (+5 more)
logs/: goomba.txt
mgmt/: coupling.md  details.md  oglobj.md  redo.md
resources/models/: cubes.gltf  testcube.gltf  testthing.gltf
resources/shaders/: default.glsl  pbr.glsl  test.glsl
